--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Embragea - Consultoria Ambiental</title>
+  <title>ENETEC - Consultoria</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -54,7 +54,6 @@
           <li><a href="index.html#about">Sobre nós</a></li>
           <li><a href="index.html#services">Nossos Serviços</a></li>
           <li><a href="port.html">Portfólio</a></li>
-          <li><a href="index.html#team">Team</a></li>
           <li class="menu-has-children"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
