--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Embragea - Consultoria Ambiental</title>
+  <title>ENETEC- Consultoria</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -54,7 +54,7 @@
           <li><a href="#about">Sobre nós</a></li>
           <li><a href="#services">Nossos Serviços</a></li>
           <li><a href="port.html">Portfólio</a></li>
-          <li><a href="#team">Team</a></li>
+      
           <li class="menu-has-children"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
