--- a/port.html
+++ b/port.html
@@ -95,11 +95,11 @@
 
           <div class="col-lg-12">
             <ul id="portfolio-flters">
-              <li data-filter=".filter-app, .filter-card, .filter-logo, .filter-web" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-logo">Logo</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-app, .filter-card, .filter-logo, .filter-web" class="filter-active">Todos</li>
+              <li data-filter=".filter-app">Eficiência Energética</li>
+              <li data-filter=".filter-card">Energia Solar</li>
+              <li data-filter=".filter-logo">Instalações elétricas</li>
+              <li data-filter=".filter-web">Sistemas de proteção a descargas atmosféricas</li>
             </ul>
           </div>
         </div>
