--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
       </div> <br><br><br>
       <center> <p> Sua casa consome muito mais ou muito menos? </p>
-       <p> <a href="#" class="cta-btn">Simulador</a></p></center>
+       <p> <a href="simulador.html" class="cta-btn">Simulador</a></p></center>
     </section><!-- #facts -->
 
     <!--==========================
