--- a/simulador.html
+++ b/simulador.html
@@ -15,15 +15,15 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700" rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
-  <link href="../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Libraries CSS Files -->
-  <link href="../lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link href="../lib/animate/animate.min.css" rel="stylesheet">
+  <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="lib/animate/animate.min.css" rel="stylesheet">
 
 
   <!-- Main Stylesheet File -->
-  <link href="../css/style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 
   <!-- =======================================================
     Theme Name: Regna
@@ -100,7 +100,7 @@
       Contact Section
       ============================-->
       <section id="simulador" >
-        <div class="container-fluid" style="margin: 0 auto; display: inline-block; padding: 25px 25px; ">
+        <div class="container-fluid" style="margin: 0 auto; display: inline-block; padding: 25px; ">
           <div class="row">
             <div class="col-md-6 col-sm-12">
               <div class="block" style="width:100%;">
