centralização do simulador para testes

--- a/simulador/index.html
+++ b/simulador/index.html
@@ -100,7 +100,11 @@
       Contact Section
       ============================-->
       <section id="simulador" >
-        <div class="container-fluid" style="margin: 0 auto; display: inline-block; padding: 25px; ">
+        <div class="container-fluid" style="padding: 25px;  margin: 0;
+ position: relative;
+    top: 50%;
+    left: 25%;
+    margin-right: -50%;">
           <div class="row">
             <div class="col-md-6 col-sm-12">
               <div class="block" style="width:100%;">
@@ -110,7 +114,7 @@
 
                 <form method="POST" action="https://formspree.io/victor.silva@enetec.unb.br">
                   <div class="form-group">
-                  <select id="sel" name="Estado" value="DF" required>
+                  <select id="sel" name="Estado" value="DF" style="margin-bottom: 10px;" required>
                     <option value="AC">AC</option>
                     <option value="AL">AL</option>
                     <option value="AP">AP</option>
