--- a/contact.html
+++ b/contact.html
@@ -54,21 +54,14 @@
           <li><a href="index.html#about">Sobre nós</a></li>
           <li><a href="index.html#services">Nossos Serviços</a></li>
           <li><a href="port.html">Portfólio</a></li>
-          <li class="menu-has-children"><a href="">Drop Down</a>
+        <li class="menu-has-children"><a href="">Nossos Serviços</a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="menu-has-children"><a href="#">Drop Down 2</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-              <li><a href="#">Drop Down 5</a></li>
+              <li><a href="#">Energia Solar Fotovoltaica</a></li>
+             
+              <li><a href="#">Sistemas de Proteção a Descargas Atmosféricas</a></li>
+              <li><a href="#">Instalações Elétricas</a></li>
+              <li><a href="#">Termografia</a></li>
+              <li><a href="#">Eficiência Energética</a></li>
             </ul>
           </li>
           <li  class="menu-active"><a href="#">Contato</a></li>
@@ -83,9 +76,7 @@
     <section id="hero">
       <div class="hero-container">
 
-        <img src="img/logo-header.png">
-        <h2>Você precisa de economia de energia? </h2>
-        <p> <a href="#about" class="btn-get-started">Saiba como podemos te ajudar</a></p>
+        <h2>Contato </h2>
       </div>
     </section><!-- #hero -->
 
@@ -100,7 +91,7 @@
       Contact Section
       ============================-->
       <section id="contact">
-        <div class="container wow fadeInUp" style="margin: 0 auto; background-color: black;">
+        <div class="container wow fadeInUp">
           <div class="section-header">
             <h3 class="section-title">Contato</h3>
             <p class="section-description">Fale conosco para obter mais informações sobre nosso serviços, estamos a disposição para ajudá-los.</p>
