--- a/port.html
+++ b/port.html
@@ -54,21 +54,14 @@
           <li><a href="index.html#about">Sobre nós</a></li>
           <li><a href="index.html#services">Nossos Serviços</a></li>
           <li class="menu-active"><a href="#">Portfólio</a></li>
-          <li class="menu-has-children"><a href="">Drop Down</a>
+         <li class="menu-has-children"><a href="">Nossos Serviços</a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="menu-has-children"><a href="#">Drop Down 2</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-              <li><a href="#">Drop Down 5</a></li>
+              <li><a href="#">Energia Solar Fotovoltaica</a></li>
+             
+              <li><a href="#">Sistemas de Proteção a Descargas Atmosféricas</a></li>
+              <li><a href="#">Instalações Elétricas</a></li>
+              <li><a href="#">Termografia</a></li>
+              <li><a href="#">Eficiência Energética</a></li>
             </ul>
           </li>
           <li ><a href="contact.html">Contato</a></li>
