--- a/simulador/index.html
+++ b/simulador/index.html
@@ -50,28 +50,21 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li><a href="index.html#hero">Início</a></li>
-          <li><a href="index.html#about">Sobre nós</a></li>
-          <li><a href="index.html#services">Nossos Serviços</a></li>
-          <li><a href="port.html">Portfólio</a></li>
-          <li class="menu-has-children"><a href="">Drop Down</a>
+          <li><a href="../index.html#hero">Início</a></li>
+          <li><a href="../index.html#about">Sobre nós</a></li>
+          <li  class="menu-active"><a href="../index.html#services">Simulador Placas Solares</a></li>
+          <li><a href="../port.html">Portfólio</a></li>
+          <li class="menu-has-children"><a href="">Nossos Serviços</a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="menu-has-children"><a href="#">Drop Down 2</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-              <li><a href="#">Drop Down 5</a></li>
+              <li><a href="#">Energia Solar Fotovoltaica</a></li>
+             
+              <li><a href="#">Sistemas de Proteção a Descargas Atmosféricas</a></li>
+              <li><a href="#">Instalações Elétricas</a></li>
+              <li><a href="#">Termografia</a></li>
+              <li><a href="#">Eficiência Energética</a></li>
             </ul>
           </li>
-          <li  class="menu-active"><a href="#">Contato</a></li>
+          <li ><a href="../contact.html">Contato</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -83,9 +76,8 @@
     <section id="hero">
       <div class="hero-container">
 
-        <img src="img/logo-header.png">
-        <h2>Você precisa de economia de energia? </h2>
-        <p> <a href="#about" class="btn-get-started">Saiba como podemos te ajudar</a></p>
+        <h2> </h2>
+        <p> <a href="#simulador" class="btn-get-started">Experimente nosso simulador gratuito!</a></p>
       </div>
     </section><!-- #hero -->
 
@@ -113,7 +105,7 @@
 
 
                 <form method="POST" action="https://formspree.io/victor.silva@enetec.unb.br">
-                  <div class="form-group">
+                Estado  <div class="form-group">
                   <select id="sel" name="Estado" value="DF" style="margin-bottom: 10px;" required>
                     <option value="AC">AC</option>
                     <option value="AL">AL</option>
