--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ENETEC - Consultoria</title>
+  <title>ENETEC - Contato</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
+  <meta content="contato, enetec" name="keywords">
+  <meta content="Tem um projeto de engenharia elétrica em mente e não sabe o que fazer? Fale conosco!" name="description">
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
@@ -50,21 +50,41 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li><a href="index.html#hero">Início</a></li>
-          <li><a href="index.html#about">Sobre nós</a></li>
-          <li><a href="index.html#services">Nossos Serviços</a></li>
-          <li><a href="port.html">Portfólio</a></li>
-        <li class="menu-has-children"><a href="">Nossos Serviços</a>
+
+      <li class="menu-has-children"><a href="">Serviços</a>
+        <ul>
+          <li class="menu-has-children"><a href="">Fotovoltaica</a>
             <ul>
-              <li><a href="#">Energia Solar Fotovoltaica</a></li>
-             
-              <li><a href="#">Sistemas de Proteção a Descargas Atmosféricas</a></li>
-              <li><a href="#">Instalações Elétricas</a></li>
-              <li><a href="#">Termografia</a></li>
-              <li><a href="#">Eficiência Energética</a></li>
+            <li><a href="fotovoltaica/index.html">Simulador de Placas Solares</a></li>
+
+              <li><a href="fotovoltaica/foto.html">Vantagens</a></li>
             </ul>
+              <li class="menu-has-children"><a href="">Instalações</a>
+                <ul>
+                  <li><a href="instalacoes/instala.html">Projetos</a></li>
+              <li><a href="instalacoes/spda.html">Sistemas de proteção a Descarga atmosférica</a></li>
+                      <li><a href="instalacoes/normas.html">Adequação às normas</a></li>
+            </ul>
+
+            <li class="menu-has-children"><a href="">Eficiência</a>
+              <ul>
+                <li><a href="eficiencia/lumino.html">Luminotécnico</a></li>
+            <li><a href="eficiencia/analise.html">Análise de conta de luz</a></li>
+            <li><a href="eficiencia/analise.html">Análise de qualidade de energia</a></li>
+          </ul>
           </li>
-          <li  class="menu-active"><a href="#">Contato</a></li>
+
+  </ul>
+  <li class="menu-has-children"><a href="">E-books</a>
+    <ul>
+  <li><a href="landing/index.html">8 ideias de como economizar em casa</a></li>
+  <li><a href="landing2/index.html">Guia de iluminação</a></li>
+  <li><a href="landing/index3.html">Como proteger suas intalações elétricas</a></li>
+  </ul>
+  </li>
+  <li><a href="port.html">Portfólio</a></li>
+  <li><a href="port.html">Acompanhamento</a></li>
+          <li><a href="contact.html">Contato</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -73,10 +93,10 @@
   <!--==========================
     Hero Section
     ============================-->
-    <section id="hero">
+    <section id="hero" style="background: url(img/about-img3.jpg) top center fixed;background:cover;">
       <div class="hero-container">
 
-        <h2>Contato </h2>
+        <h1>Contato </h1>
       </div>
     </section><!-- #hero -->
 
@@ -107,13 +127,13 @@
               <div class="info">
                 <div>
                   <i class="fa fa-map-marker"></i>
-                  <p>FUP-UNB<br>
-                  73.345-010 Planaltina</p>
+                  <p><br>
+                SG-11</p>
                 </div>
 
                 <div>
                   <i class="fa fa-envelope"></i>
-                  <p>embrageaunb@gmail.com</p>
+                  <p>enetec@enetec.unb.br</p>
                 </div>
 
                 <div>
@@ -123,11 +143,9 @@
               </div>
 
               <div class="social-links">
-                <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-                <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+               <a href="www.facebook.com.br/enetec.consultoria" class="facebook"><i class="fa fa-facebook"></i></a>
+               <a href="www.instagram.com.br/enetec" class="instagram"><i class="fa fa-instagram"></i></a>
+               <a href="www.linkedin.com/enetec" class="linkedin"><i class="fa fa-linkedin"></i></a>
               </div>
 
             </div>
@@ -165,64 +183,64 @@
 
     </main>
 
-  <!--==========================
-    Footer
-    ============================-->
-    <footer id="footer">
-      <div class="footer-top">
+    <!--==========================
+      Footer
+      ============================-->
+      <footer id="footer">
+        <div class="footer-top">
+          <div class="container">
+
+          </div>
+        </div>
+
         <div class="container">
-
+          <div class="copyright">
+            &copy; Copyright <strong>ENETEC</strong>. All Rights Reserved
+          </div>
+          <div class="credits">
+          <!--
+            All the links in the footer should remain intact.
+            You can delete the links only if you purchased the pro version.
+            Licensing information: https://bootstrapmade.com/license/
+            Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Regna
+          -->
+          Boostrap & ENETEC made Tampate
         </div>
       </div>
+    </footer><!-- #footer -->
 
-      <div class="container">
-        <div class="copyright">
-          &copy; Copyright <strong>inSite</strong>. All Rights Reserved
-        </div>
-        <div class="credits">
-        <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Regna
-        -->
-        Boostrap & inSite made Tampate 
-      </div>
-    </div>
-  </footer><!-- #footer -->
+    <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
-  <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+    <!-- JavaScript Libraries -->
+    <script src="lib/jquery/jquery.min.js"></script>
+    <script src="lib/jquery/jquery-migrate.min.js"></script>
+    <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/wow/wow.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
 
-  <!-- JavaScript Libraries -->
-  <script src="lib/jquery/jquery.min.js"></script>
-  <script src="lib/jquery/jquery-migrate.min.js"></script>
-  <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="lib/easing/easing.min.js"></script>
-  <script src="lib/wow/wow.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/counterup/counterup.min.js"></script>
+    <script src="lib/superfish/hoverIntent.js"></script>
+    <script src="lib/superfish/superfish.min.js"></script>
 
-  <script src="lib/waypoints/waypoints.min.js"></script>
-  <script src="lib/counterup/counterup.min.js"></script>
-  <script src="lib/superfish/hoverIntent.js"></script>
-  <script src="lib/superfish/superfish.min.js"></script>
+    <!-- Contact Form JavaScript File -->
+    <script src="contactform/contactform.js"></script>
 
-  <!-- Contact Form JavaScript File -->
-  <script src="contactform/contactform.js"></script>
-
-  <!-- Template Main Javascript File -->
-  <script src="js/main.js"></script>
-  <!--Start of Tawk.to Script-->
-  <script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-      s1.async=true;
-      s1.src='https://embed.tawk.to/5a50e988d7591465c7068629/default';
-      s1.charset='UTF-8';
-      s1.setAttribute('crossorigin','*');
-      s0.parentNode.insertBefore(s1,s0);
-    })();
-  </script>
-  <!--End of Tawk.to Script-->
-</body>
-</html>
+    <!-- Template Main Javascript File -->
+    <script src="js/main.js"></script>
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+      (function(){
+        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+        s1.async=true;
+        s1.src='https://embed.tawk.to/5a50e988d7591465c7068629/default';
+        s1.charset='UTF-8';
+        s1.setAttribute('crossorigin','*');
+        s0.parentNode.insertBefore(s1,s0);
+      })();
+    </script>
+    <!--End of Tawk.to Script-->
+  </body>
+  </html>
