--- a/port.html
+++ b/port.html
@@ -50,21 +50,41 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li ><a href="index.html">Início</a></li>
-          <li><a href="index.html#about">Sobre nós</a></li>
-          <li><a href="index.html#services">Nossos Serviços</a></li>
-          <li class="menu-active"><a href="#">Portfólio</a></li>
-         <li class="menu-has-children"><a href="">Nossos Serviços</a>
+
+      <li class="menu-has-children"><a href="">Serviços</a>
+        <ul>
+          <li class="menu-has-children"><a href="">Fotovoltaica</a>
             <ul>
-              <li><a href="#">Energia Solar Fotovoltaica</a></li>
-             
-              <li><a href="#">Sistemas de Proteção a Descargas Atmosféricas</a></li>
-              <li><a href="#">Instalações Elétricas</a></li>
-              <li><a href="#">Termografia</a></li>
-              <li><a href="#">Eficiência Energética</a></li>
+            <li><a href="fotovoltaica/index.html">Simulador de Placas Solares</a></li>
+
+              <li><a href="fotovoltaica/foto.html">Vantagens</a></li>
             </ul>
+              <li class="menu-has-children"><a href="">Instalações</a>
+                <ul>
+                                <li><a href="instalacoes/instala.html">Projetos</a></li>
+              <li><a href="instalacoes/spda.html">Sistemas de proteção a Descarga atmosférica</a></li>
+                      <li><a href="instalacoes/normas.html">Adequação às normas</a></li>
+            </ul>
+
+            <li class="menu-has-children"><a href="">Eficiência</a>
+              <ul>
+                <li><a href="eficiencia/lumino.html">Luminotécnico</a></li>
+            <li><a href="eficiencia/analise.html">Análise de conta de luz</a></li>
+            <li><a href="eficiencia/analise.html">Análise de qualidade de energia</a></li>
+          </ul>
           </li>
-          <li ><a href="contact.html">Contato</a></li>
+
+  </ul>
+  <li class="menu-has-children"><a href="">E-books</a>
+    <ul>
+  <li><a href="landing/index.html">8 ideias de como economizar em casa</a></li>
+  <li><a href="landing2/index.html">Guia de iluminação</a></li>
+  <li><a href="landing/index3.html">Como proteger suas intalações elétricas</a></li>
+  </ul>
+  </li>
+  <li><a href="port.html">Portfólio</a></li>
+  <li><a href="port.html">Acompanhamento</a></li>
+          <li><a href="contact.html">Contato</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -79,10 +99,21 @@
       Portfolio Section
     ============================-->
     <section id="portfolio">
+      <div id="projetos">
+
+          <div id="modal-header">
+              <span id="btn"></span>
+              <h2 style="text-align:center">Projetos</h2>
+          </div>
+          <div id="body" style="padding:2x 16px">
+          </div>
+
+
+      </div>
       <div class="container wow fadeInUp">
         <div class="section-header">
           <h3 class="section-title">Portfolio</h3>
-          <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <p class="section-description">Aqui estão nossos principais projetos</p>
         </div>
         <div class="row">
 
@@ -98,156 +129,125 @@
         </div>
 
         <div class="row" id="portfolio-wrapper">
-          <div class="col-lg-3 col-md-6 portfolio-item filter-app">
-            <a href="">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-app" id="efi1">
               <img src="img/portfolio/app1.jpg" alt="">
               <div class="details">
-                <h4>App 1</h4>
-                <span>Alored dono par</span>
+                <h4>Guarda Presidencial</h4>
+
               </div>
-            </a>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-web">
-            <a href="">
-              <img src="img/portfolio/web2.jpg" alt="">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-app"  id="efi2">
+
+              <img src="img/portfolio/app2.jpg" alt="">
               <div class="details">
-                <h4>Web 2</h4>
-                <span>Alored dono par</span>
+                <h4>ACM</h4>
+
               </div>
-            </a>
+
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-app">
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-app"  id="efi3">
             <a href="">
               <img src="img/portfolio/app3.jpg" alt="">
               <div class="details">
-                <h4>App 3</h4>
-                <span>Alored dono par</span>
+                <h4>Escola CED</h4>
               </div>
             </a>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-app"  id="efi4">
+            <a href="">
+              <img src="img/portfolio/app3.jpg" alt="">
+              <div class="details">
+                <h4>AlphaVille</h4>
+              </div>
+            </a>
+          </div>
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-card" id="foto1">
             <a href="">
               <img src="img/portfolio/card1.jpg" alt="">
               <div class="details">
-                <h4>Card 1</h4>
-                <span>Alored dono par</span>
+                <h4>Energia Fotovoltaica</h4>
               </div>
             </a>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-card" id="foto2">
             <a href="">
               <img src="img/portfolio/card2.jpg" alt="">
               <div class="details">
-                <h4>Card 2</h4>
-                <span>Alored dono par</span>
+                <h4>Maximo Garden</h4>
+
               </div>
             </a>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-web">
-            <a href="">
-              <img src="img/portfolio/web3.jpg" alt="">
-              <div class="details">
-                <h4>Web 3</h4>
-                <span>Alored dono par</span>
-              </div>
-            </a>
-          </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-card">
-            <a href="">
-              <img src="img/portfolio/card3.jpg" alt="">
-              <div class="details">
-                <h4>Card 3</h4>
-                <span>Alored dono par</span>
-              </div>
-            </a>
-          </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-app">
-            <a href="">
-              <img src="img/portfolio/app2.jpg" alt="">
-              <div class="details">
-                <h4>App 2</h4>
-                <span>Alored dono par</span>
-              </div>
-            </a>
-          </div>
-
-          <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
-            <a href="">
-              <img src="img/portfolio/logo1.jpg" alt="">
-              <div class="details">
-                <h4>Logo 1</h4>
-                <span>Alored dono par</span>
-              </div>
-            </a>
-          </div>
-
-          <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
-            <a href="">
-              <img src="img/portfolio/logo3.jpg" alt="">
-              <div class="details">
-                <h4>Logo 3</h4>
-                <span>Alored dono par</span>
-              </div>
-            </a>
-          </div>
-
-          <div class="col-lg-3 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-web" id="spda1">
             <a href="">
               <img src="img/portfolio/web1.jpg" alt="">
               <div class="details">
-                <h4>Web 1</h4>
-                <span>Alored dono par</span>
+                <h4>Edíficio Innovatore</h4>
               </div>
             </a>
           </div>
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-logo" id="ins1">
             <a href="">
-              <img src="img/portfolio/logo2.jpg" alt="">
+              <img src="img/portfolio/logo1.jpg" alt="">
               <div class="details">
-                <h4>Logo 2</h4>
-                <span>Alored dono par</span>
+                <h4>Condomínio 416 Norte</h4>
               </div>
             </a>
           </div>
+
+
+                    <div class="col-lg-3 col-md-6 portfolio-item filter-logo" id="ins2">
+                      <a href="">
+                        <img src="img/portfolio/logo2.jpg" alt="">
+                        <div class="details">
+                          <h4>La Fiesta</h4>
+                        </div>
+                      </a>
+                    </div>
+
+
 
         </div>
 
       </div>
-    </section><!-- #portfolio -->
 
+    </section><!-- #portfolio -->
 
   </main>
 
   <!--==========================
     Footer
-  ============================-->
-  <footer id="footer">
-    <div class="footer-top">
+    ============================-->
+    <footer id="footer">
+      <div class="footer-top">
+        <div class="container">
+
+        </div>
+      </div>
+
       <div class="container">
-
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong>inSite</strong>. All Rights Reserved
-      </div>
-      <div class="credits">
+        <div class="copyright">
+          &copy; Copyright <strong>ENETEC</strong>. All Rights Reserved
+        </div>
+        <div class="credits">
         <!--
           All the links in the footer should remain intact.
           You can delete the links only if you purchased the pro version.
           Licensing information: https://bootstrapmade.com/license/
           Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Regna
         -->
-        Boostrap & inSite made Tampate 
+        Boostrap & ENETEC made Tampate
       </div>
     </div>
   </footer><!-- #footer -->
@@ -272,18 +272,18 @@
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/5a50e988d7591465c7068629/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/5a50e988d7591465c7068629/default';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+    })();
+  </script>
+  <!--End of Tawk.to Script-->
 </body>
 </html>
