link correto das redes sociais

--- a/contact.html
+++ b/contact.html
@@ -143,9 +143,9 @@
               </div>
 
               <div class="social-links">
-               <a href="www.facebook.com.br/enetec.consultoria" class="facebook"><i class="fa fa-facebook"></i></a>
-               <a href="www.instagram.com.br/enetec" class="instagram"><i class="fa fa-instagram"></i></a>
-               <a href="www.linkedin.com/enetec" class="linkedin"><i class="fa fa-linkedin"></i></a>
+               <a href="https://www.facebook.com.br/enetec.consultoria" class="facebook"><i class="fa fa-facebook"></i></a>
+               <a href="https://www.instagram.com/enetec" class="instagram"><i class="fa fa-instagram"></i></a>
+               <a href="https://pt.linkedin.com/company/enetec-consultoria" class="linkedin"><i class="fa fa-linkedin"></i></a>
               </div>
 
             </div>
