Menu e algumas coisas

--- a/fotovoltaica/index.html
+++ b/fotovoltaica/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>ENETEC - Simulador Solar</title>
@@ -32,9 +33,9 @@
     License: https://bootstrapmade.com/license/
     ======================================================= -->
 
-  </head>
+</head>
 
-  <body>
+<body>
 
   <!--==========================
   Header
@@ -43,63 +44,106 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <a href="#hero"><img id="myImage" src="../img/logo-header.png" alt="" title="" /></img></a>
+        <a href="#hero">
+          <img id="myImage" src="../img/logo-header.png" alt="" title="" /></img>
+        </a>
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
 
-      <li class="menu-has-children"><a href="">Serviços</a>
-        <ul>
-          <li class="menu-has-children"><a href="">Fotovoltaica</a>
-            <ul>
-            <li><a href="../Fotovoltaica/index.html">Simulador de Placas Solares</a></li>
-
-              <li><a href="../index.html">Vantagens</a></li>
-            </ul>
-              <li class="menu-has-children"><a href="">Instalações</a>
-                <ul>
-                  <li><a href="../instalacoes/instala.html">Projetos</a></li>
-              <li><a href="../instalacoes/spda.html">Sistemas de proteção a Descarga atmosférica</a></li>
-                      <li><a href="../instalacoes/normas.html">Adequação às normas</a></li>
-            </ul>
-
-            <li class="menu-has-children"><a href="">Eficiência</a>
-              <ul>
-                <li><a href="../eficiencia/lumino.html">Luminotécnico</a></li>
-            <li><a href="../eficiencia/analise.html">Análise de conta de luz</a></li>
-            <li><a href="../eficiencia/analise.html">Análise de qualidade de energia</a></li>
-          </ul>
+          <li>
+            <a href="../index.html">Início</a>
           </li>
+          <li class="menu-has-children">
+            <a href="">Serviços</a>
+            <ul>
+              <li class="menu-has-children">
+                <a href="">Fotovoltaica</a>
+                <ul>
+                  <li>
+                    <a href="../Fotovoltaica/index.html">Simulador de Placas Solares</a>
+                  </li>
 
-  </ul>
-  <li class="menu-has-children"><a href="">E-books</a>
-    <ul>
-  <li><a href="../landing/index.html">8 ideias de como economizar em casa</a></li>
-  <li><a href="../landing2/index.html">Guia de iluminação</a></li>
-  <li><a href="../landing/index3.html">Como proteger suas intalações elétricas</a></li>
-  </ul>
-  </li>
-  <li><a href="../port.html">Portfólio</a></li>
-  <li><a href="../port.html">Acompanhamento</a></li>
-          <li><a href="../contact.html">Contato</a></li>
+                  <li>
+                    <a href="../index.html">Vantagens</a>
+                  </li>
+                </ul>
+                <li class="menu-has-children">
+                  <a href="">Instalações</a>
+                  <ul>
+                    <li>
+                      <a href="../instalacoes/instala.html">Projetos</a>
+                    </li>
+                    <li>
+                      <a href="../instalacoes/spda.html">Sistemas de proteção a Descarga atmosférica</a>
+                    </li>
+                    <li>
+                      <a href="../instalacoes/normas.html">Adequação às normas</a>
+                    </li>
+                  </ul>
+
+                  <li class="menu-has-children">
+                    <a href="">Eficiência</a>
+                    <ul>
+                      <li>
+                        <a href="../eficiencia/lumino.html">Luminotécnico</a>
+                      </li>
+                      <li>
+                        <a href="../eficiencia/analise.html">Análise de conta de luz</a>
+                      </li>
+                      <li>
+                        <a href="../eficiencia/analise.html">Análise de qualidade de energia</a>
+                      </li>
+                    </ul>
+                  </li>
+
+            </ul>
+            <li class="menu-has-children">
+              <a href="">E-books</a>
+              <ul>
+                <li>
+                  <a href="../landing/index.html">8 ideias de como economizar em casa</a>
+                </li>
+                <li>
+                  <a href="../landing2/index.html">Guia de iluminação</a>
+                </li>
+                <li>
+                  <a href="../landing/index3.html">Como proteger suas intalações elétricas</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="../port.html">Portfólio</a>
+            </li>
+            <li>
+              <a href="../blog">Blog</a>
+            </li>
+            <li>
+              <a href="../contact.html">Contato</a>
+            </li>
         </ul>
-      </nav><!-- #nav-menu-container -->
+      </nav>
+      <!-- #nav-menu-container -->
     </div>
-  </header><!-- #header -->
+  </header>
+  <!-- #header -->
 
   <!--==========================
     Hero Section
     ============================-->
-    <section id="hero" style="background: url(../img/hero-bg.jpg) top center fixed;">
-      <div class="hero-container">
-                <img src="../img/logo-header.png">
-        <h2> </h2>
-        <p> <a href="#simulador" class="btn-get-started">Experimente nosso simulador gratuito!</a></p>
-      </div>
-    </section><!-- #hero -->
+  <section id="hero" style="background: url(../img/hero-bg.jpg) top center fixed;">
+    <div class="hero-container">
+      <img src="../img/logo-header.png">
+      <h2> </h2>
+      <p>
+        <a href="#simulador" class="btn-get-started">Experimente nosso simulador gratuito!</a>
+      </p>
+    </div>
+  </section>
+  <!-- #hero -->
 
-    <main id="main">
+  <main id="main">
 
     <!--==========================
       About Us Section
@@ -109,21 +153,24 @@
     <!--==========================
       Contact Section
       ============================-->
-      <section id="simulador" >
-        <div class="container-fluid" style="padding: 25px;  margin: 0;
+    <section id="simulador">
+      <div class="container-fluid" style="padding: 25px;  margin: 0;
  position: relative;
     top: 50%;
     left: 25%;
     margin-right: -50%;">
-          <div class="row">
-            <div class="col-md-6 col-sm-12">
-              <div class="block" style="width:100%;">
-                <h2>Simule seu projeto fotovoltaico</h2> <br><br>
+        <div class="row">
+          <div class="col-md-6 col-sm-12">
+            <div class="block" style="width:100%;">
+              <h2>Simule seu projeto fotovoltaico</h2>
+              <br>
+              <br>
 
 
 
-                <form method="POST" action="https://formspree.io/victor.silva@enetec.unb.br">
-                Estado  <div class="form-group">
+              <form method="POST" action="https://formspree.io/victor.silva@enetec.unb.br">
+                Estado
+                <div class="form-group">
                   <select id="sel" name="Estado" value="DF" style="margin-bottom: 10px;" required>
                     <option value="AC">AC</option>
                     <option value="AL">AL</option>
@@ -155,56 +202,59 @@
                   </select>
                   <input id="name" name="nome" type="text" class="form-control" placeholder="Nome" required/>
                   <input name="email" id="email" type="email" class="form-control" placeholder="E-mail" required/>
-                  <input id="cons" name="consumo"type="number" class="form-control" placeholder="Digite seu consumo, em kWh" required/>
-                  <input id="cons" name="telefone" type="tel" class="form-control" placeholder="Digite seu telefone(opcional)"/>
-                  <input id="tarifa" name="tarifa"type="text" class="form-control" placeholder="Digite a tarifa da sua região" required/>
+                  <input id="cons" name="consumo" type="number" class="form-control" placeholder="Digite seu consumo, em kWh" required/>
+                  <input id="cons" name="telefone" type="tel" class="form-control" placeholder="Digite seu telefone(opcional)" />
+                  <input id="tarifa" name="tarifa" type="text" class="form-control" placeholder="Digite a tarifa da sua região" required/>
 
 
-                  <button class="btn btn-default">  <input type="submit" placeholder="Simular" id="simule"/></button>
+                  <button class="btn btn-default">
+                    <input type="submit" placeholder="Simular" id="simule" />
+                  </button>
 
-                  <input type="text" name="_gotcha" style="display:none"/>
+                  <input type="text" name="_gotcha" style="display:none" />
                   <input type="hidden" name="_next" value="#" />
-                  <input type="hidden" name="_language" value= "pt_BR"/>
+                  <input type="hidden" name="_language" value="pt_BR" />
                 </div>
-                </form>
+              </form>
 
-                <div style="display:none" id="div-simulador">
-                  <p id="texto-nome"></p>
-                  <p id="texto-placas">
+              <div style="display:none" id="div-simulador">
+                <p id="texto-nome"></p>
+                <p id="texto-placas">
 
-                  </p>
-                  <p id="texto-custo">
-                  </p>
-                  <h3>
-                    Gráfico de kWh x mês
-                  </h3>
-                  <canvas id="grafico" width="560%" height="200%" style=" border:1px solid #000000;">
-                  </canvas>
-                  <p>
-                    Lembrando que essas medidas são uma estimativa
-                  </p>
-                  <a href="../contact/index.html">
-                    Para um projeto exato, fale conosco!
-                  </a>
-                </div>
+                </p>
+                <p id="texto-custo">
+                </p>
+                <h3>
+                  Gráfico de kWh x mês
+                </h3>
+                <canvas id="grafico" width="560%" height="200%" style=" border:1px solid #000000;">
+                </canvas>
+                <p>
+                  Lembrando que essas medidas são uma estimativa
+                </p>
+                <a href="../contact/index.html">
+                  Para um projeto exato, fale conosco!
+                </a>
               </div>
             </div>
-
-
-
-
-
-
           </div>
+
+
+
+
+
+
         </div>
+      </div>
 
       </div>
-    </div>
-  </section><!-- #contact -->
+      </div>
+    </section>
+    <!-- #contact -->
 
-</main>
+  </main>
 
-<!--==========================
+  <!--==========================
   Footer
   ============================-->
   <footer id="footer">
@@ -216,52 +266,57 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>ENETEC</strong>. All Rights Reserved
+        &copy; Copyright
+        <strong>ENETEC</strong>. All Rights Reserved
       </div>
       <div class="credits">
-      <!--
+        <!--
         All the links in the footer should remain intact.
         You can delete the links only if you purchased the pro version.
         Licensing information: https://bootstrapmade.com/license/
         Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Regna
       -->
-      Boostrap & ENETEC made Tampate
+        Boostrap & ENETEC made Tampate
+      </div>
     </div>
-  </div>
-</footer><!-- #footer -->
+  </footer>
+  <!-- #footer -->
 
-<a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+  <a href="#" class="back-to-top">
+    <i class="fa fa-chevron-up"></i>
+  </a>
 
-<!-- JavaScript Libraries -->
-<script src="lib/jquery/jquery.min.js"></script>
-<script src="lib/jquery/jquery-migrate.min.js"></script>
-<script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="lib/easing/easing.min.js"></script>
-<script src="lib/wow/wow.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
+  <!-- JavaScript Libraries -->
+  <script src="lib/jquery/jquery.min.js"></script>
+  <script src="lib/jquery/jquery-migrate.min.js"></script>
+  <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="lib/easing/easing.min.js"></script>
+  <script src="lib/wow/wow.min.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
 
-<script src="lib/waypoints/waypoints.min.js"></script>
-<script src="lib/counterup/counterup.min.js"></script>
-<script src="lib/superfish/hoverIntent.js"></script>
-<script src="lib/superfish/superfish.min.js"></script>
+  <script src="lib/waypoints/waypoints.min.js"></script>
+  <script src="lib/counterup/counterup.min.js"></script>
+  <script src="lib/superfish/hoverIntent.js"></script>
+  <script src="lib/superfish/superfish.min.js"></script>
 
-<!-- Contact Form JavaScript File -->
-<script src="contactform/contactform.js"></script>
+  <!-- Contact Form JavaScript File -->
+  <script src="contactform/contactform.js"></script>
 
-<!-- Template Main Javascript File -->
-<script src="js/main.js"></script>
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-  (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/5a50e988d7591465c7068629/default';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
-  })();
-</script>
-<!--End of Tawk.to Script-->
+  <!-- Template Main Javascript File -->
+  <script src="js/main.js"></script>
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function () {
+      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = 'https://embed.tawk.to/5a50e988d7591465c7068629/default';
+      s1.charset = 'UTF-8';
+      s1.setAttribute('crossorigin', '*');
+      s0.parentNode.insertBefore(s1, s0);
+    })();
+  </script>
+  <!--End of Tawk.to Script-->
 </body>
+
 </html>
