--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>ENETEC - Contato</title>
@@ -32,9 +33,9 @@
     License: https://bootstrapmade.com/license/
     ======================================================= -->
 
-  </head>
+</head>
 
-  <body>
+<body>
 
   <!--==========================
   Header
@@ -43,71 +44,105 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <a href="#hero"><img id="myImage" src="img/logo-header.png" alt="" title="" /></img></a>
+        <a href="#hero">
+          <img id="myImage" src="img/logo-header.png" alt="" title="" /></img>
+        </a>
         <!-- Uncomment below if you prefer to use a text logo -->
         <!--<h1><a href="#hero">Regna</a></h1>-->
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-<<<<<<< HEAD
-          <li><a href="index.html#hero">Início</a></li>
-          <li><a href="index.html#services">Nossos Serviços</a></li>
-          <li><a href="port.html">Portfólio</a></li>
-        <li class="menu-has-children"><a href="">Nossos Serviços</a>
-=======
 
-      <li class="menu-has-children"><a href="">Serviços</a>
-        <ul>
-          <li class="menu-has-children"><a href="">Fotovoltaica</a>
->>>>>>> 873e18a04584b80c8fa44d136a4dc5ea5dc3f4bd
-            <ul>
-            <li><a href="fotovoltaica/index.html">Simulador de Placas Solares</a></li>
-
-              <li><a href="fotovoltaica/foto.html">Vantagens</a></li>
-            </ul>
-              <li class="menu-has-children"><a href="">Instalações</a>
-                <ul>
-                  <li><a href="instalacoes/instala.html">Projetos</a></li>
-              <li><a href="instalacoes/spda.html">Sistemas de proteção a Descarga atmosférica</a></li>
-                      <li><a href="instalacoes/normas.html">Adequação às normas</a></li>
-            </ul>
-
-            <li class="menu-has-children"><a href="">Eficiência</a>
-              <ul>
-                <li><a href="eficiencia/lumino.html">Luminotécnico</a></li>
-            <li><a href="eficiencia/analise.html">Análise de conta de luz</a></li>
-            <li><a href="eficiencia/analise.html">Análise de qualidade de energia</a></li>
-          </ul>
+          <li>
+            <a href="index.html">Início</a>
           </li>
+          <li class="menu-has-children">
+            <a href="">Serviços</a>
+            <ul>
+              <li class="menu-has-children">
+                <a href="">Fotovoltaica</a>
+                <ul>
+                  <li>
+                    <a href="fotovoltaica/index.html">Simulador de Placas Solares</a>
+                  </li>
 
-  </ul>
-  <li class="menu-has-children"><a href="">E-books</a>
-    <ul>
-  <li><a href="landing/index.html">8 ideias de como economizar em casa</a></li>
-  <li><a href="landing2/index.html">Guia de iluminação</a></li>
-  <li><a href="landing/index3.html">Como proteger suas intalações elétricas</a></li>
-  </ul>
-  </li>
-  <li><a href="port.html">Portfólio</a></li>
-  <li><a href="port.html">Acompanhamento</a></li>
-          <li><a href="contact.html">Contato</a></li>
+                  <li>
+                    <a href="fotovoltaica/foto.html">Vantagens</a>
+                  </li>
+                </ul>
+                <li class="menu-has-children">
+                  <a href="">Instalações</a>
+                  <ul>
+                    <li>
+                      <a href="instalacoes/instala.html">Projetos</a>
+                    </li>
+                    <li>
+                      <a href="instalacoes/spda.html">Sistemas de proteção a Descarga atmosférica</a>
+                    </li>
+                    <li>
+                      <a href="instalacoes/normas.html">Adequação às normas</a>
+                    </li>
+                  </ul>
+
+                  <li class="menu-has-children">
+                    <a href="">Eficiência</a>
+                    <ul>
+                      <li>
+                        <a href="eficiencia/lumino.html">Luminotécnico</a>
+                      </li>
+                      <li>
+                        <a href="eficiencia/analise.html">Análise de conta de luz</a>
+                      </li>
+                      <li>
+                        <a href="eficiencia/analise.html">Análise de qualidade de energia</a>
+                      </li>
+                    </ul>
+                  </li>
+
+            </ul>
+            <li class="menu-has-children">
+              <a href="">E-books</a>
+              <ul>
+                <li>
+                  <a href="landing/index.html">8 ideias de como economizar em casa</a>
+                </li>
+                <li>
+                  <a href="landing2/index.html">Guia de iluminação</a>
+                </li>
+                <li>
+                  <a href="landing/index3.html">Como proteger suas intalações elétricas</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="port.html">Portfólio</a>
+            </li>
+            <li>
+                <a href="blog">Blog</a>
+            </li>
+            <li>
+              <a href="contact.html">Contato</a>
+            </li>
         </ul>
-      </nav><!-- #nav-menu-container -->
+      </nav>
+      <!-- #nav-menu-container -->
     </div>
-  </header><!-- #header -->
+  </header>
+  <!-- #header -->
 
   <!--==========================
     Hero Section
     ============================-->
-    <section id="hero" style="background: url(img/about-img3.jpg) top center fixed;background:cover;">
-      <div class="hero-container">
+  <section id="hero" style="background: url(img/about-img3.jpg) top center fixed;background:cover;">
+    <div class="hero-container">
 
-        <h1>Contato </h1>
-      </div>
-    </section><!-- #hero -->
+      <h1>Contato </h1>
+    </div>
+  </section>
+  <!-- #hero -->
 
-    <main id="main">
+  <main id="main">
 
     <!--==========================
       About Us Section
@@ -117,137 +152,155 @@
     <!--==========================
       Contact Section
       ============================-->
-      <section id="contact">
-        <div class="container wow fadeInUp">
-          <div class="section-header">
-            <h3 class="section-title">Contato</h3>
-            <p class="section-description">Fale conosco para obter mais informações sobre nosso serviços, estamos a disposição para ajudá-los.</p>
-          </div>
+    <section id="contact">
+      <div class="container wow fadeInUp">
+        <div class="section-header">
+          <h3 class="section-title">Contato</h3>
+          <p class="section-description">Fale conosco para obter mais informações sobre nosso serviços, estamos a disposição para ajudá-los.</p>
         </div>
+      </div>
 
 
-        <div class="container wow fadeInUp">
-          <div class="row justify-content-center">
+      <div class="container wow fadeInUp">
+        <div class="row justify-content-center">
 
-            <div class="col-lg-3 col-md-4">
+          <div class="col-lg-3 col-md-4">
 
-              <div class="info">
-                <div>
-                  <i class="fa fa-map-marker"></i>
-                  <p><br>
-                SG-11</p>
-                </div>
-
-                <div>
-                  <i class="fa fa-envelope"></i>
-                  <p>enetec@enetec.unb.br</p>
-                </div>
-
-                <div>
-                  <i class="fa fa-phone"></i>
-                  <p>(61) 98432-6781</p>
-                </div>
+            <div class="info">
+              <div>
+                <i class="fa fa-map-marker"></i>
+                <p>
+                  <br> SG-11
+                </p>
               </div>
 
-              <div class="social-links">
-               <a href="https://www.facebook.com.br/enetec.consultoria" class="facebook"><i class="fa fa-facebook"></i></a>
-               <a href="https://www.instagram.com/enetec" class="instagram"><i class="fa fa-instagram"></i></a>
-               <a href="https://pt.linkedin.com/company/enetec-consultoria" class="linkedin"><i class="fa fa-linkedin"></i></a>
+              <div>
+                <i class="fa fa-envelope"></i>
+                <p>enetec@enetec.unb.br</p>
               </div>
 
+              <div>
+                <i class="fa fa-phone"></i>
+                <p>(61) 98432-6781</p>
+              </div>
             </div>
 
-            <div class="col-lg-5 col-md-8">
-              <div class="form">
-                <div id="sendmessage">Your message has been sent. Thank you!</div>
-                <div id="errormessage"></div>
-                <form action="" method="post" role="form" class="contactForm">
-                  <div class="form-group">
-                    <input type="text" name="name" class="form-control" id="name" placeholder="Seu Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                    <div class="validation"></div>
-                  </div>
-                  <div class="form-group">
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Seu Email" data-rule="email" data-msg="Please enter a valid email" />
-                    <div class="validation"></div>
-                  </div>
-                  <div class="form-group">
-                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                    <div class="validation"></div>
-                  </div>
-                  <div class="form-group">
-                    <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Digite aqui sua mensagem"></textarea>
-                    <div class="validation"></div>
-                  </div>
-                  <div class="text-center"><button type="submit">Enviar mensagem</button></div>
-                </form>
-              </div>
+            <div class="social-links">
+              <a href="https://www.facebook.com.br/enetec.consultoria" class="facebook">
+                <i class="fa fa-facebook"></i>
+              </a>
+              <a href="https://www.instagram.com/enetec" class="instagram">
+                <i class="fa fa-instagram"></i>
+              </a>
+              <a href="https://pt.linkedin.com/company/enetec-consultoria" class="linkedin">
+                <i class="fa fa-linkedin"></i>
+              </a>
             </div>
 
           </div>
 
+          <div class="col-lg-5 col-md-8">
+            <div class="form">
+              <div id="sendmessage">Your message has been sent. Thank you!</div>
+              <div id="errormessage"></div>
+              <form action="" method="post" role="form" class="contactForm">
+                <div class="form-group">
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Seu Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars"
+                  />
+                  <div class="validation"></div>
+                </div>
+                <div class="form-group">
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Seu Email" data-rule="email" data-msg="Please enter a valid email"
+                  />
+                  <div class="validation"></div>
+                </div>
+                <div class="form-group">
+                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject"
+                  />
+                  <div class="validation"></div>
+                </div>
+                <div class="form-group">
+                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Digite aqui sua mensagem"></textarea>
+                  <div class="validation"></div>
+                </div>
+                <div class="text-center">
+                  <button type="submit">Enviar mensagem</button>
+                </div>
+              </form>
+            </div>
+          </div>
+
         </div>
-      </section><!-- #contact -->
 
-    </main>
+      </div>
+    </section>
+    <!-- #contact -->
 
-    <!--==========================
+  </main>
+
+  <!--==========================
       Footer
       ============================-->
-      <footer id="footer">
-        <div class="footer-top">
-          <div class="container">
+  <footer id="footer">
+    <div class="footer-top">
+      <div class="container">
 
-          </div>
-        </div>
+      </div>
+    </div>
 
-        <div class="container">
-          <div class="copyright">
-            &copy; Copyright <strong>ENETEC</strong>. All Rights Reserved
-          </div>
-          <div class="credits">
-          <!--
+    <div class="container">
+      <div class="copyright">
+        &copy; Copyright
+        <strong>ENETEC</strong>. All Rights Reserved
+      </div>
+      <div class="credits">
+        <!--
             All the links in the footer should remain intact.
             You can delete the links only if you purchased the pro version.
             Licensing information: https://bootstrapmade.com/license/
             Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Regna
           -->
-          Boostrap & ENETEC made Tampate
-        </div>
+        Boostrap & ENETEC made Tampate
       </div>
-    </footer><!-- #footer -->
+    </div>
+  </footer>
+  <!-- #footer -->
 
-    <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+  <a href="#" class="back-to-top">
+    <i class="fa fa-chevron-up"></i>
+  </a>
 
-    <!-- JavaScript Libraries -->
-    <script src="lib/jquery/jquery.min.js"></script>
-    <script src="lib/jquery/jquery-migrate.min.js"></script>
-    <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
+  <!-- JavaScript Libraries -->
+  <script src="lib/jquery/jquery.min.js"></script>
+  <script src="lib/jquery/jquery-migrate.min.js"></script>
+  <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="lib/easing/easing.min.js"></script>
+  <script src="lib/wow/wow.min.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
 
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/counterup/counterup.min.js"></script>
-    <script src="lib/superfish/hoverIntent.js"></script>
-    <script src="lib/superfish/superfish.min.js"></script>
+  <script src="lib/waypoints/waypoints.min.js"></script>
+  <script src="lib/counterup/counterup.min.js"></script>
+  <script src="lib/superfish/hoverIntent.js"></script>
+  <script src="lib/superfish/superfish.min.js"></script>
 
-    <!-- Contact Form JavaScript File -->
-    <script src="contactform/contactform.js"></script>
+  <!-- Contact Form JavaScript File -->
+  <script src="contactform/contactform.js"></script>
 
-    <!-- Template Main Javascript File -->
-    <script src="js/main.js"></script>
-    <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
-      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-      (function(){
-        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-        s1.async=true;
-        s1.src='https://embed.tawk.to/5a50e988d7591465c7068629/default';
-        s1.charset='UTF-8';
-        s1.setAttribute('crossorigin','*');
-        s0.parentNode.insertBefore(s1,s0);
-      })();
-    </script>
-    <!--End of Tawk.to Script-->
-  </body>
-  </html>
+  <!-- Template Main Javascript File -->
+  <script src="js/main.js"></script>
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function () {
+      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = 'https://embed.tawk.to/5a50e988d7591465c7068629/default';
+      s1.charset = 'UTF-8';
+      s1.setAttribute('crossorigin', '*');
+      s0.parentNode.insertBefore(s1, s0);
+    })();
+  </script>
+  <!--End of Tawk.to Script-->
+</body>
+
+</html>
