--- a/eficiencia/analise.html
+++ b/eficiencia/analise.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>ENETEC - Análise de Energia</title>
@@ -32,10 +33,10 @@
     License: https://bootstrapmade.com/license/
     ======================================================= -->
 
-  </head>
+</head>
 
 
-  <body>
+<body>
 
   <!--==========================
   Header
@@ -44,7 +45,9 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <a href="#hero"><img id="myImage" src="../img/logo-header.png" alt="" title="" /></img></a>
+        <a href="#hero">
+          <img id="myImage" src="../img/logo-header.png" alt="" title="" /></img>
+        </a>
         <!-- Uncomment below if you prefer to use a text logo -->
         <!--<h1><a href="#hero">Regna</a></h1>-->
       </div>
@@ -52,158 +55,222 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
 
-      <li class="menu-has-children"><a href="">Serviços</a>
-        <ul>
-          <li class="menu-has-children"><a href="">Fotovoltaica</a>
-            <ul>
-            <li><a href="../simulador/index.html">Simulador de Placas Solares</a></li>
-
-              <li><a href="../index.html">Vantagens</a></li>
-            </ul>
-              <li class="menu-has-children"><a href="">Instalações</a>
-                <ul>
-                          <li><a href="../instalacoes/instala.html">Projetos</a></li>
-              <li><a href="../instalacoes/spda.html">Sistemas de proteção a Descarga atmosférica</a></li>
-                      <li><a href="../instalacoes/normas.html">Adequação às normas</a></li>
-            </ul>
-
-            <li class="menu-has-children"><a href="">Eficiência</a>
-              <ul>
-                <li><a href="../eficiencia/lumino.html">Luminotécnico</a></li>
-            <li><a href="../eficiencia/analise.html">Análise de conta de luz</a></li>
-            <li><a href="../eficiencia/analise.html">Análise de qualidade de energia</a></li>
-          </ul>
+          <li>
+            <a href="#=../index.html">Início</a>
           </li>
+          <li class="menu-has-children">
+            <a href="">Serviços</a>
+            <ul>
+              <li class="menu-has-children">
+                <a href="">Fotovoltaica</a>
+                <ul>
+                  <li>
+                    <a href="../simulador/index.html">Simulador de Placas Solares</a>
+                  </li>
 
-  </ul>
-  <li class="menu-has-children"><a href="">E-books</a>
-    <ul>
-  <li><a href="../landing/index.html">8 ideias de como economizar em casa</a></li>
-  <li><a href="../landing2/index.html">Guia de iluminação</a></li>
-  <li><a href="../landing/index3.html">Como proteger suas intalações elétricas</a></li>
-  </ul>
-  </li>
-  <li><a href="../port.html">Portfólio</a></li>
-  <li><a href="../port.html">Acompanhamento</a></li>
-          <li><a href="../contact.html">Contato</a></li>
+                  <li>
+                    <a href="../index.html">Vantagens</a>
+                  </li>
+                </ul>
+                <li class="menu-has-children">
+                  <a href="">Instalações</a>
+                  <ul>
+                    <li>
+                      <a href="../instalacoes/instala.html">Projetos</a>
+                    </li>
+                    <li>
+                      <a href="../instalacoes/spda.html">Sistemas de proteção a Descarga atmosférica</a>
+                    </li>
+                    <li>
+                      <a href="../instalacoes/normas.html">Adequação às normas</a>
+                    </li>
+                  </ul>
+
+                  <li class="menu-has-children">
+                    <a href="">Eficiência</a>
+                    <ul>
+                      <li>
+                        <a href="../eficiencia/lumino.html">Luminotécnico</a>
+                      </li>
+                      <li>
+                        <a href="../eficiencia/analise.html">Análise de conta de luz</a>
+                      </li>
+                      <li>
+                        <a href="../eficiencia/analise.html">Análise de qualidade de energia</a>
+                      </li>
+                    </ul>
+                  </li>
+
+            </ul>
+            <li class="menu-has-children">
+              <a href="">E-books</a>
+              <ul>
+                <li>
+                  <a href="../landing/index.html">8 ideias de como economizar em casa</a>
+                </li>
+                <li>
+                  <a href="../landing2/index.html">Guia de iluminação</a>
+                </li>
+                <li>
+                  <a href="../landing/index3.html">Como proteger suas intalações elétricas</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="../port.html">Portfólio</a>
+            </li>
+            <li>
+                <a href="../blog">Blog</a>
+            </li>
+            <li>
+              <a href="../contact.html">Contato</a>
+            </li>
         </ul>
-      </nav><!-- #nav-menu-container -->
+      </nav>
+      <!-- #nav-menu-container -->
     </div>
-  </header><!-- #header -->
+  </header>
+  <!-- #header -->
 
   <!--==========================
     Hero Section
     ============================-->
-    <section id="hero"   style="background: url(../img/about-img3.jpg) top center fixed;">
-      <div class="hero-container">
+  <section id="hero" style="background: url(../img/about-img3.jpg) top center fixed;">
+    <div class="hero-container">
+      <h1> Análise de Conta de Luz</h1>
+      <h2>Você está com problemas elétricos na sua casa/ escritório? </h2>
+      <p>
+        <a href="#about" class="btn-get-started">Saiba como podemos te ajudar</a>
+      </p>
+    </div>
+  </section>
+  <!-- #hero -->
 
-        <img src="../img/logo-header.png">
-        <h2>Você está com problemas elétricos na sua casa/ escritório? </h2>
-        <p> <a href="#about" class="btn-get-started">Saiba como podemos te ajudar</a></p>
-      </div>
-    </section><!-- #hero -->
-
-    <main id="main">
+  <main id="main">
 
     <!--==========================
       About Us Section
       ============================-->
-      <section id="about" style="background: url(../img/analise2.jpg) top center fixed;" >
-        <div class="container">
-          <div class="row about-container">
-            <center>
-              <div class="col-lg-6 order-lg-1 order-2">
-                <br><br>
-                <h2 class="title" style=" color: white;
+    <section id="about" style="background: url(../img/analise2.jpg) top center fixed;">
+      <div class="container">
+        <div class="row about-container">
+          <center>
+            <div class="col-lg-6 order-lg-1 order-2">
+              <br>
+              <br>
+              <h2 class="title" style=" color: white;
                 text-shadow: 3px 3px 3px black;"> Por quê minha conta de luz está alta?</h2>
-                <p style="color: white;
+              <p style="color: white;
                 text-shadow: 3px 3px 3px black;">
-              Vários fatores são comuns para o aumento da conta de luz:mau dimensionamento dos equipamentos
-              (demanda), multas, maus hábitos de consumo e equipamentos de alto consumo.
-
-               Os dois primeiros ocorrem apenas em contas tipo A (geralmente empresas).
-         </p>
-         <p style="color: white;
+                Vários fatores são comuns para o aumento da conta de luz:mau dimensionamento dos equipamentos (demanda), multas, maus hábitos
+                de consumo e equipamentos de alto consumo. Os dois primeiros ocorrem apenas em contas tipo A (geralmente
+                empresas).
+              </p>
+              <p style="color: white;
          text-shadow: 3px 3px 3px black;">
-          Uma outra causa, mais difícil de identificar, são fugas de corrente:
-          parte da energia não chega nos equipamentos porque se dissipa no meio do caminho.
-</p>
-<p style="color: white;
+                Uma outra causa, mais difícil de identificar, são fugas de corrente: parte da energia não chega nos equipamentos porque se
+                dissipa no meio do caminho.
+              </p>
+              <p style="color: white;
 text-shadow: 3px 3px 3px black;">
- Por meio de equipamento chamado de analisador de cargas,
- podemos identificar a qualidade da energia que chega ao imóvel.
- Isso permite identificar onde e se há fugas de corrente.
-</p>
+                Por meio de equipamento chamado de analisador de cargas, podemos identificar a qualidade da energia que chega ao imóvel.
+                Isso permite identificar onde e se há fugas de corrente.
+              </p>
 
 
 
-         <h2 class="title" style="color: white;
+              <h2 class="title" style="color: white;
          text-shadow: 3px 3px 3px black;"> O que eu posso fazer?</h2>
-         <p style="color: white;
+              <p style="color: white;
          text-shadow: 3px 3px 3px black;">
-         Um estudo detalhado é necessário para cada caso. Contudo, algumas medidas
-         são muito comuns: trocar lâmpadas fluorescentes por lâmpadas LED,
-         desligar equipamentos quando não usados (mesmo em stand-by, eles ainda
-         consomem energia).
-       </p>
+                Um estudo detalhado é necessário para cada caso. Contudo, algumas medidas são muito comuns: trocar lâmpadas fluorescentes
+                por lâmpadas LED, desligar equipamentos quando não usados (mesmo em stand-by, eles ainda consomem energia).
+              </p>
 
-            <p style=" color: white;
+              <p style=" color: white;
             text-shadow: 3px 3px 3px black;" class="description">
-A ENETEC analisa a sua conta de luz e também a qualidade de energia. Não pague
-mais que o necessário!
-<a href="../contact.html">
-Fale conosco.
-</a>
- Faremos um orçamento gratuito sem compromisso.
-Ficaremos felizes em ajudar.
-          </p> <br><br>
+                A ENETEC analisa a sua conta de luz e também a qualidade de energia. Não pague mais que o necessário!
+                <a href="../contact.html">
+                  Fale conosco.
+                </a>
+                Faremos um orçamento gratuito sem compromisso. Ficaremos felizes em ajudar.
+              </p>
+              <br>
+              <br>
 
+            </div>
+          </center>
         </div>
-      </center>
-    </div>
 
-  </div>
-</section><!-- #about -->
+      </div>
+    </section>
+    <!-- #about -->
 
     <!--==========================
       Services Section
       ============================-->
-      <section id="services">
-        <div class="container wow fadeIn">
-          <div class="section-header">
-            <h3 class="section-title">O que podemos fazer por você</h3>
-            <p class="section-description">Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
+    <section id="services">
+      <div class="container wow fadeIn">
+        <div class="section-header">
+          <h3 class="section-title">O que podemos fazer por você</h3>
+          <p class="section-description">Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
+        </div>
+        <div class="row">
+          <div class=".col-sm-8 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+            <div class="box">
+              <div class="icon">
+                <a href="">
+                  <i class="fa fa-plug"></i>
+                </a>
+              </div>
+              <h4 class="title">
+                <a href="">Instalações Elétricas</a>
+              </h4>
+              <p class="description">Projetamos, fazemos análise e emitimos laudos técnicos de instalações elétricas. Tudo para garantir a sua segurança
+                e a estabilidade energética do local. Quer reformar a sua casa?
+                <a href="">Fale conosco</a>
+              </p>
+            </div>
           </div>
-          <div class="row">
-            <div class=".col-sm-8 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-              <div class="box">
-                <div class="icon"><a href=""><i class="fa fa-plug"></i></a></div>
-                <h4 class="title"><a href="">Instalações Elétricas</a></h4>
-                <p class="description">Projetamos, fazemos análise e emitimos laudos técnicos de instalações elétricas. Tudo para garantir a sua segurança e a estabilidade energética do local. Quer reformar a sua casa? <a href="">Fale conosco</a></p>
+          <div class="col-sm-8 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+            <div class="box">
+              <div class="icon">
+                <a href="">
+                  <i class="fa fa-sun-o"></i>
+                </a>
               </div>
+              <h4 class="title">
+                <a href="">Placa solares</a>
+              </h4>
+              <p class="description">Na ENETEC, analisamos suas necessidades e o espaço onde vive, para projetarmos um sstema de eergia solar fotovoltaico
+                eficiente. Temos parceiros que executam o projeto na sua casa para você começar a gerar sua própria energia
+                em casa.</p>
             </div>
-            <div class="col-sm-8 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+          </div>
+          <center>
+            <div class="col-sm-8 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
               <div class="box">
-                <div class="icon"><a href=""><i class="fa fa-sun-o"></i></a></div>
-                <h4 class="title"><a href="">Placa solares</a></h4>
-                <p class="description">Na ENETEC, analisamos suas necessidades e o espaço onde vive, para projetarmos um sstema de eergia solar fotovoltaico eficiente. Temos parceiros que executam o projeto na sua casa para você começar a gerar sua própria energia em casa.</p>
-              </div>
-            </div>
-            <center>
-              <div class="col-sm-8 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-                <div class="box">
-                  <div class="icon"><a href=""><i class="fa fa-line-chart"></i></a></div>
-                  <h4 class="title"><a href="">Eficiência Energética</a></h4>
-                  <p class="description">Otimizamos a energia do local para que ele se torne mais econômico. Anualmente, estima-se que 10% da energia gerada no Brasil seja desperdiçada. Na maior parte dos casos, a culpa não é nossa e sim dos aparelhos que utilizamos.</p>
+                <div class="icon">
+                  <a href="">
+                    <i class="fa fa-line-chart"></i>
+                  </a>
                 </div>
+                <h4 class="title">
+                  <a href="">Eficiência Energética</a>
+                </h4>
+                <p class="description">Otimizamos a energia do local para que ele se torne mais econômico. Anualmente, estima-se que 10% da energia
+                  gerada no Brasil seja desperdiçada. Na maior parte dos casos, a culpa não é nossa e sim dos aparelhos que
+                  utilizamos.</p>
               </div>
-            </center>
+            </div>
+          </center>
 
-
-          </div>
 
         </div>
-      </section><!-- #services -->
+
+      </div>
+    </section>
+    <!-- #services -->
 
     <!--==========================
     Call To Action Section
@@ -212,7 +279,8 @@ Ficaremos felizes em ajudar.
       <div class="container wow fadeIn">
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
-            <h3 class="cta-title" style="padding-top: 90px;">Quer começar agora? Entre em contato conosco <a href="">aqui</a> ou entre no chat do site e fale agora com um de nossos atendentes.</h3>
+            <h3 class="cta-title" style="padding-top: 90px;">Quer começar agora? Entre em contato conosco
+              <a href="">aqui</a> ou entre no chat do site e fale agora com um de nossos atendentes.</h3>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <p>
@@ -224,29 +292,31 @@ Ficaremos felizes em ajudar.
         </div>
 
       </div>
-    </section><!-- #call-to-action -->
+    </section>
+    <!-- #call-to-action -->
 
 
 
 
-  <!--==========================
+    <!--==========================
     Footer
     ============================-->
     <!--==========================
       Footer
       ============================-->
-      <footer id="footer">
-        <div class="footer-top">
-          <div class="container">
-
-          </div>
-        </div>
-
+    <footer id="footer">
+      <div class="footer-top">
         <div class="container">
-          <div class="copyright">
-            &copy; Copyright <strong>ENETEC</strong>. All Rights Reserved
-          </div>
-          <div class="credits">
+
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="copyright">
+          &copy; Copyright
+          <strong>ENETEC</strong>. All Rights Reserved
+        </div>
+        <div class="credits">
           <!--
             All the links in the footer should remain intact.
             You can delete the links only if you purchased the pro version.
@@ -256,9 +326,12 @@ Ficaremos felizes em ajudar.
           Boostrap & ENETEC made Tampate
         </div>
       </div>
-    </footer><!-- #footer -->
+    </footer>
+    <!-- #footer -->
 
-    <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+    <a href="#" class="back-to-top">
+      <i class="fa fa-chevron-up"></i>
+    </a>
 
     <!-- JavaScript Libraries -->
     <script src="lib/jquery/jquery.min.js"></script>
@@ -280,16 +353,17 @@ Ficaremos felizes em ajudar.
     <script src="js/main.js"></script>
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
-      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-      (function(){
-        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-        s1.async=true;
-        s1.src='https://embed.tawk.to/5a50e988d7591465c7068629/default';
-        s1.charset='UTF-8';
-        s1.setAttribute('crossorigin','*');
-        s0.parentNode.insertBefore(s1,s0);
+      var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+      (function () {
+        var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = 'https://embed.tawk.to/5a50e988d7591465c7068629/default';
+        s1.charset = 'UTF-8';
+        s1.setAttribute('crossorigin', '*');
+        s0.parentNode.insertBefore(s1, s0);
       })();
     </script>
     <!--End of Tawk.to Script-->
-  </body>
-  </html>
+</body>
+
+</html>
