--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>ENETEC- Consultoria</title>
+  <title>ENETEC - Consultoria</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="energia, sustentável, economia,solar,sistema,fotovoltaico,projeto, investimento" name="keywords">
   <meta content="Quer colocar um sistema de energia solar em casa e não sabe como? Fale conosco. Podemos te ajudar!" name="description">
@@ -53,44 +53,81 @@
       </div>
 
       <nav id="nav-menu-container">
-          <ul class="nav-menu">
+        <ul class="nav-menu">
 
-        <li class="menu-has-children"><a href="">Serviços</a>
-          <ul>
-            <li class="menu-has-children"><a href="">Fotovoltaica</a>
-              <ul>
-              <li><a href="fotovoltaica/index.html">Simulador de Placas Solares</a></li>
-
-                <li><a href="fotovoltaica/foto.html">Vantagens</a></li>
-              </ul>
-                <li class="menu-has-children"><a href="">Instalações</a>
-                  <ul>
-                          <li><a href="instalacoes/instala.html">Projetos</a></li>
-                <li><a href="instalacoes/spda.html">Sistemas de proteção a Descarga atmosférica</a></li>
-                        <li><a href="instalacoes/normas.html">Adequação às normas</a></li>
-              </ul>
-
-              <li class="menu-has-children"><a href="">Eficiência</a>
+          <li>
+            <a href="#">Início</a>
+          </li>
+          <li class="menu-has-children">
+            <a href="">Serviços</a>
+            <ul>
+              <li class="menu-has-children">
+                <a href="">Fotovoltaica</a>
                 <ul>
-                  <li><a href="eficiencia/lumino.html">Luminotécnico</a></li>
-              <li><a href="eficiencia/analise.html">Análise de conta de luz</a></li>
-              <li><a href="eficiencia/analise.html">Análise de qualidade de energia</a></li>
-            </ul>
-            </li>
+                  <li>
+                    <a href="fotovoltaica/index.html">Simulador de Placas Solares</a>
+                  </li>
 
-    </ul>
-    <li class="menu-has-children"><a href="">E-books</a>
-      <ul>
-    <li><a href="landing/index.html">8 ideias de como economizar em casa</a></li>
-    <li><a href="landing2/index.html">Guia de iluminação</a></li>
-    <li><a href="landing/index3.html">Como proteger suas intalações elétricas</a></li>
-    </ul>
-    </li>
-    <li><a href="port.html">Portfólio</a></li>
-    <li><a href="port.html">Acompanhamento</a></li>
-            <li><a href="contact.html">Contato</a></li>
-          </ul>
-      </nav><!-- #nav-menu-container -->
+                  <li>
+                    <a href="fotovoltaica/foto.html">Vantagens</a>
+                  </li>
+                </ul>
+                <li class="menu-has-children">
+                  <a href="">Instalações</a>
+                  <ul>
+                    <li>
+                      <a href="instalacoes/instala.html">Projetos</a>
+                    </li>
+                    <li>
+                      <a href="instalacoes/spda.html">Sistemas de proteção a Descarga atmosférica</a>
+                    </li>
+                    <li>
+                      <a href="instalacoes/normas.html">Adequação às normas</a>
+                    </li>
+                  </ul>
+
+                  <li class="menu-has-children">
+                    <a href="">Eficiência</a>
+                    <ul>
+                      <li>
+                        <a href="eficiencia/lumino.html">Luminotécnico</a>
+                      </li>
+                      <li>
+                        <a href="eficiencia/analise.html">Análise de conta de luz</a>
+                      </li>
+                      <li>
+                        <a href="eficiencia/analise.html">Análise de qualidade de energia</a>
+                      </li>
+                    </ul>
+                  </li>
+
+            </ul>
+            <li class="menu-has-children">
+              <a href="">E-books</a>
+              <ul>
+                <li>
+                  <a href="landing/index.html">8 ideias de como economizar em casa</a>
+                </li>
+                <li>
+                  <a href="landing2/index.html">Guia de iluminação</a>
+                </li>
+                <li>
+                  <a href="landing/index3.html">Como proteger suas intalações elétricas</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="port.html">Portfólio</a>
+            </li>
+            <li>
+                <a href="blog">Blog</a>
+            </li>
+            <li>
+              <a href="contact.html">Contato</a>
+            </li>
+        </ul>
+      </nav>
+      <!-- #nav-menu-container -->
     </div>
   </header>
   <!-- #header -->
@@ -163,7 +200,7 @@
     <!--==========================
       Services Section
       ============================-->
-    <section id="services" style="background-image: url(img/about-img.jpg);">
+    <section id="services" style="background-image: url(img/hero-bg2.jpg);">
       <div class="container wow fadeIn">
         <div class="section-header">
           <h3 class="section-title" style="color:white; text-shadow: 0.5px 0.5px 0.5px gray">O que podemos fazer por você</h3>
@@ -320,69 +357,69 @@
       <div class="footer-top">
         <div class="container">
 
-    <!--==========================
+          <!--==========================
       Footer
       ============================-->
-      <footer id="footer">
-        <div class="footer-top">
-          <div class="container">
+          <footer id="footer">
+            <div class="footer-top">
+              <div class="container">
 
-          </div>
-        </div>
+              </div>
+            </div>
 
-      <div class="container">
-        <div class="copyright">
-          &copy; Copyright
-          <strong>inSite</strong>. All Rights Reserved
-        </div>
-        <div class="credits">
-          <!--
+            <div class="container">
+              <div class="copyright">
+                &copy; Copyright
+                <strong>inSite</strong>. All Rights Reserved
+              </div>
+              <div class="credits">
+                <!--
           All the links in the footer should remain intact.
           You can delete the links only if you purchased the pro version.
           Licensing information: https://bootstrapmade.com/license/
           Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Regna
         -->
-          Boostrap & inSite made Tampate
-        </div>
-      </div>
-    </footer>
-    <!-- #footer -->
+                Boostrap & inSite made Tampate
+              </div>
+            </div>
+          </footer>
+          <!-- #footer -->
 
-    <a href="#" class="back-to-top">
-      <i class="fa fa-chevron-up"></i>
-    </a>
+          <a href="#" class="back-to-top">
+            <i class="fa fa-chevron-up"></i>
+          </a>
 
-    <!-- JavaScript Libraries -->
-    <script src="lib/jquery/jquery.min.js"></script>
-    <script src="lib/jquery/jquery-migrate.min.js"></script>
-    <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
+          <!-- JavaScript Libraries -->
+          <script src="lib/jquery/jquery.min.js"></script>
+          <script src="lib/jquery/jquery-migrate.min.js"></script>
+          <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+          <script src="lib/easing/easing.min.js"></script>
+          <script src="lib/wow/wow.min.js"></script>
+          <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
 
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/counterup/counterup.min.js"></script>
-    <script src="lib/superfish/hoverIntent.js"></script>
-    <script src="lib/superfish/superfish.min.js"></script>
+          <script src="lib/waypoints/waypoints.min.js"></script>
+          <script src="lib/counterup/counterup.min.js"></script>
+          <script src="lib/superfish/hoverIntent.js"></script>
+          <script src="lib/superfish/superfish.min.js"></script>
 
-    <!-- Contact Form JavaScript File -->
-    <script src="contactform/contactform.js"></script>
+          <!-- Contact Form JavaScript File -->
+          <script src="contactform/contactform.js"></script>
 
-    <!-- Template Main Javascript File -->
-    <script src="js/main.js"></script>
-    <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
-      var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-      (function () {
-        var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-        s1.async = true;
-        s1.src = 'https://embed.tawk.to/5a50e988d7591465c7068629/default';
-        s1.charset = 'UTF-8';
-        s1.setAttribute('crossorigin', '*');
-        s0.parentNode.insertBefore(s1, s0);
-      })();
-    </script>
-    <!--End of Tawk.to Script-->
+          <!-- Template Main Javascript File -->
+          <script src="js/main.js"></script>
+          <!--Start of Tawk.to Script-->
+          <script type="text/javascript">
+            var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+            (function () {
+              var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+              s1.async = true;
+              s1.src = 'https://embed.tawk.to/5a50e988d7591465c7068629/default';
+              s1.charset = 'UTF-8';
+              s1.setAttribute('crossorigin', '*');
+              s0.parentNode.insertBefore(s1, s0);
+            })();
+          </script>
+          <!--End of Tawk.to Script-->
 </body>
 
 </html>
