--- a/port.html
+++ b/port.html
@@ -54,40 +54,76 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
 
-      <li class="menu-has-children"><a href="">Serviços</a>
-        <ul>
-          <li class="menu-has-children"><a href="">Fotovoltaica</a>
-            <ul>
-            <li><a href="fotovoltaica/index.html">Simulador de Placas Solares</a></li>
-
-              <li><a href="fotovoltaica/foto.html">Vantagens</a></li>
-            </ul>
-              <li class="menu-has-children"><a href="">Instalações</a>
-                <ul>
-                                <li><a href="instalacoes/instala.html">Projetos</a></li>
-              <li><a href="instalacoes/spda.html">Sistemas de proteção a Descarga atmosférica</a></li>
-                      <li><a href="instalacoes/normas.html">Adequação às normas</a></li>
-            </ul>
-
-            <li class="menu-has-children"><a href="">Eficiência</a>
-              <ul>
-                <li><a href="eficiencia/lumino.html">Luminotécnico</a></li>
-            <li><a href="eficiencia/analise.html">Análise de conta de luz</a></li>
-            <li><a href="eficiencia/analise.html">Análise de qualidade de energia</a></li>
-          </ul>
+          <li>
+            <a href="index.html">Início</a>
           </li>
+          <li class="menu-has-children">
+            <a href="">Serviços</a>
+            <ul>
+              <li class="menu-has-children">
+                <a href="">Fotovoltaica</a>
+                <ul>
+                  <li>
+                    <a href="fotovoltaica/index.html">Simulador de Placas Solares</a>
+                  </li>
 
-  </ul>
-  <li class="menu-has-children"><a href="">E-books</a>
-    <ul>
-  <li><a href="landing/index.html">8 ideias de como economizar em casa</a></li>
-  <li><a href="landing2/index.html">Guia de iluminação</a></li>
-  <li><a href="landing/index3.html">Como proteger suas intalações elétricas</a></li>
-  </ul>
-  </li>
-  <li><a href="port.html">Portfólio</a></li>
-  <li><a href="port.html">Acompanhamento</a></li>
-          <li><a href="contact.html">Contato</a></li>
+                  <li>
+                    <a href="fotovoltaica/foto.html">Vantagens</a>
+                  </li>
+                </ul>
+                <li class="menu-has-children">
+                  <a href="">Instalações</a>
+                  <ul>
+                    <li>
+                      <a href="instalacoes/instala.html">Projetos</a>
+                    </li>
+                    <li>
+                      <a href="instalacoes/spda.html">Sistemas de proteção a Descarga atmosférica</a>
+                    </li>
+                    <li>
+                      <a href="instalacoes/normas.html">Adequação às normas</a>
+                    </li>
+                  </ul>
+
+                  <li class="menu-has-children">
+                    <a href="">Eficiência</a>
+                    <ul>
+                      <li>
+                        <a href="eficiencia/lumino.html">Luminotécnico</a>
+                      </li>
+                      <li>
+                        <a href="eficiencia/analise.html">Análise de conta de luz</a>
+                      </li>
+                      <li>
+                        <a href="eficiencia/analise.html">Análise de qualidade de energia</a>
+                      </li>
+                    </ul>
+                  </li>
+
+            </ul>
+            <li class="menu-has-children">
+              <a href="">E-books</a>
+              <ul>
+                <li>
+                  <a href="landing/index.html">8 ideias de como economizar em casa</a>
+                </li>
+                <li>
+                  <a href="landing2/index.html">Guia de iluminação</a>
+                </li>
+                <li>
+                  <a href="landing/index3.html">Como proteger suas intalações elétricas</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="port.html">Portfólio</a>
+            </li>
+            <li>
+                <a href="blog">Blog</a>
+            </li>
+            <li>
+              <a href="contact.html">Contato</a>
+            </li>
         </ul>
       </nav>
       <!-- #nav-menu-container -->
@@ -106,199 +142,200 @@
   <!--==========================
       Portfolio Section
     ============================-->
-    <section id="portfolio">
-      <div id="projetos">
+  <section id="portfolio">
+    <div id="projetos">
 
-          <div id="modal-header">
-              <span id="btn"></span>
-              <h2 style="text-align:center">Projetos</h2>
-          </div>
-          <div id="body" style="padding:2x 16px">
-          </div>
-
-
+      <div id="modal-header">
+        <span id="btn"></span>
+        <h2 style="text-align:center">Projetos</h2>
       </div>
-      <div class="container wow fadeInUp">
-        <div class="section-header">
-          <h3 class="section-title">Portfolio</h3>
-          <p class="section-description">Aqui estão nossos principais projetos</p>
-        </div>
-        <div class="row">
-
-          <div class="col-lg-12">
-            <ul id="portfolio-flters">
-              <li data-filter=".filter-app, .filter-card, .filter-logo, .filter-web" class="filter-active">Todos</li>
-              <li data-filter=".filter-app">Eficiência Energética</li>
-              <li data-filter=".filter-card">Energia Solar</li>
-              <li data-filter=".filter-logo">Instalações elétricas</li>
-              <li data-filter=".filter-web">Sistemas de proteção a descargas atmosféricas</li>
-            </ul>
-          </div>
-        </div>
+      <div id="body" style="padding:2x 16px">
       </div>
 
-        <div class="row" id="portfolio-wrapper">
-          <div class="col-lg-3 col-md-6 portfolio-item filter-app" id="efi1">
-              <img src="img/portfolio/app1.jpg" alt="">
-              <div class="details">
-                <h4>Guarda Presidencial</h4>
 
-              </div>
-          </div>
+    </div>
+    <div class="container wow fadeInUp">
+      <div class="section-header">
+        <h3 class="section-title">Portfolio</h3>
+        <p class="section-description">Aqui estão nossos principais projetos</p>
+      </div>
+      <div class="row">
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-app"  id="efi2">
-
-              <img src="img/portfolio/app2.jpg" alt="">
-              <div class="details">
-                <h4>ACM</h4>
-
-              </div>
-
-          </div>
-
-
-          <div class="col-lg-3 col-md-6 portfolio-item filter-app"  id="efi3">
-            <a href="">
-              <img src="img/portfolio/app3.jpg" alt="">
-              <div class="details">
-                <h4>Escola CED</h4>
-              </div>
-            </div>
-
-          </div>
+        <div class="col-lg-12">
+          <ul id="portfolio-flters">
+            <li data-filter=".filter-app, .filter-card, .filter-logo, .filter-web" class="filter-active">Todos</li>
+            <li data-filter=".filter-app">Eficiência Energética</li>
+            <li data-filter=".filter-card">Energia Solar</li>
+            <li data-filter=".filter-logo">Instalações elétricas</li>
+            <li data-filter=".filter-web">Sistemas de proteção a descargas atmosféricas</li>
+          </ul>
         </div>
-        <!-- Final Projeto 1-->
+      </div>
+    </div>
 
+    <div class="row" id="portfolio-wrapper">
+      <div class="col-lg-3 col-md-6 portfolio-item filter-app" id="efi1">
+        <img src="img/portfolio/app1.jpg" alt="">
+        <div class="details">
+          <h4>Guarda Presidencial</h4>
 
-        <div class="col-lg-3 col-md-6 portfolio-item filter-web">
-          <a href="">
-            <img src="img/portfolio/web2.jpg" alt="">
-            <div class="details">
-              <h4>Web 2</h4>
-              <span>Alored dono par</span>
-            </div>
-          </a>
         </div>
+      </div>
 
-        <div class="col-lg-3 col-md-6 portfolio-item filter-app">
-          <a href="">
-            <img src="img/portfolio/app3.jpg" alt="">
-            <div class="details">
-              <h4>App 3</h4>
-              <span>Alored dono par</span>
-            </div>
-          </a>
-        </div>
+      <div class="col-lg-3 col-md-6 portfolio-item filter-app" id="efi2">
 
-        <div class="col-lg-3 col-md-6 portfolio-item filter-card">
-          <a href="">
-            <img src="img/portfolio/card1.jpg" alt="">
-            <div class="details">
-              <h4>Card 1</h4>
-              <span>Alored dono par</span>
-            </div>
-          </a>
-        </div>
+        <img src="img/portfolio/app2.jpg" alt="">
+        <div class="details">
+          <h4>ACM</h4>
 
-        <div class="col-lg-3 col-md-6 portfolio-item filter-card">
-          <a href="">
-            <img src="img/portfolio/card2.jpg" alt="">
-            <div class="details">
-              <h4>Card 2</h4>
-              <span>Alored dono par</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 portfolio-item filter-web">
-          <a href="">
-            <img src="img/portfolio/web3.jpg" alt="">
-            <div class="details">
-              <h4>Web 3</h4>
-              <span>Alored dono par</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 portfolio-item filter-card">
-          <a href="">
-            <img src="img/portfolio/card3.jpg" alt="">
-            <div class="details">
-              <h4>Card 3</h4>
-              <span>Alored dono par</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 portfolio-item filter-app">
-          <a href="">
-            <img src="img/portfolio/app2.jpg" alt="">
-            <div class="details">
-              <h4>App 2</h4>
-              <span>Alored dono par</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
-          <a href="">
-            <img src="img/portfolio/logo1.jpg" alt="">
-            <div class="details">
-              <h4>Logo 1</h4>
-              <span>Alored dono par</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
-          <a href="">
-            <img src="img/portfolio/logo3.jpg" alt="">
-            <div class="details">
-              <h4>Logo 3</h4>
-              <span>Alored dono par</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 portfolio-item filter-web">
-          <a href="">
-            <img src="img/portfolio/web1.jpg" alt="">
-            <div class="details">
-              <h4>Web 1</h4>
-              <span>Alored dono par</span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
-          <a href="">
-            <img src="img/portfolio/logo2.jpg" alt="">
-            <div class="details">
-              <h4>Logo 2</h4>
-              <span>Alored dono par</span>
-            </div>
-          </a>
         </div>
 
       </div>
+
+
+      <div class="col-lg-3 col-md-6 portfolio-item filter-app" id="efi3">
+        <a href="">
+          <img src="img/portfolio/app3.jpg" alt="">
+          <div class="details">
+            <h4>Escola CED</h4>
+          </div>
+      </div>
+
+    </div>
+    </div>
+    <!-- Final Projeto 1-->
+
+
+    <div class="col-lg-3 col-md-6 portfolio-item filter-web">
+      <a href="">
+        <img src="img/portfolio/web2.jpg" alt="">
+        <div class="details">
+          <h4>Web 2</h4>
+          <span>Alored dono par</span>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-lg-3 col-md-6 portfolio-item filter-app">
+      <a href="">
+        <img src="img/portfolio/app3.jpg" alt="">
+        <div class="details">
+          <h4>App 3</h4>
+          <span>Alored dono par</span>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-lg-3 col-md-6 portfolio-item filter-card">
+      <a href="">
+        <img src="img/portfolio/card1.jpg" alt="">
+        <div class="details">
+          <h4>Card 1</h4>
+          <span>Alored dono par</span>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-lg-3 col-md-6 portfolio-item filter-card">
+      <a href="">
+        <img src="img/portfolio/card2.jpg" alt="">
+        <div class="details">
+          <h4>Card 2</h4>
+          <span>Alored dono par</span>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-lg-3 col-md-6 portfolio-item filter-web">
+      <a href="">
+        <img src="img/portfolio/web3.jpg" alt="">
+        <div class="details">
+          <h4>Web 3</h4>
+          <span>Alored dono par</span>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-lg-3 col-md-6 portfolio-item filter-card">
+      <a href="">
+        <img src="img/portfolio/card3.jpg" alt="">
+        <div class="details">
+          <h4>Card 3</h4>
+          <span>Alored dono par</span>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-lg-3 col-md-6 portfolio-item filter-app">
+      <a href="">
+        <img src="img/portfolio/app2.jpg" alt="">
+        <div class="details">
+          <h4>App 2</h4>
+          <span>Alored dono par</span>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
+      <a href="">
+        <img src="img/portfolio/logo1.jpg" alt="">
+        <div class="details">
+          <h4>Logo 1</h4>
+          <span>Alored dono par</span>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
+      <a href="">
+        <img src="img/portfolio/logo3.jpg" alt="">
+        <div class="details">
+          <h4>Logo 3</h4>
+          <span>Alored dono par</span>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-lg-3 col-md-6 portfolio-item filter-web">
+      <a href="">
+        <img src="img/portfolio/web1.jpg" alt="">
+        <div class="details">
+          <h4>Web 1</h4>
+          <span>Alored dono par</span>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-lg-3 col-md-6 portfolio-item filter-logo">
+      <a href="">
+        <img src="img/portfolio/logo2.jpg" alt="">
+        <div class="details">
+          <h4>Logo 2</h4>
+          <span>Alored dono par</span>
+        </div>
+      </a>
+    </div>
+
+    </div>
 
     </div>
   </section>
   <!-- #portfolio -->
 
-    </section><!-- #portfolio -->
+  </section>
+  <!-- #portfolio -->
 
   </main>
 
   <!--==========================
     Footer
     ============================-->
-    <footer id="footer">
-      <div class="footer-top">
-        <div class="container">
+  <footer id="footer">
+    <div class="footer-top">
+      <div class="container">
 
-        </div>
       </div>
+    </div>
 
     <div class="container">
       <div class="copyright">
