--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
               </ul>
             </li>
             <li>
-              <a href="port.html">Portfólio</a>
+            <!--  <a href="port.html">Portfólio</a> -->
             </li>
             <li>
                 <a href="blog">Blog</a>
