--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               </ul>
             </li>
             <li>
-              <a href="port.html">Portfólio</a>
+                <!--  <a href="port.html">Portfólio</a> -->
             </li>
             <li>
                 <a href="blog">Blog</a>
@@ -188,7 +188,7 @@
       <br>
       <br>
       <center>
-        <p> Sua casa consome muito mais ou muito menos? </p>
+        <p> Sua casa consome muito mais ou muito menos? Experimente nosso simulador gratuito </p>
         <p>
           <a href="simulador/index.html" class="cta-btn">Simulador</a>
         </p>
