--- a/simulador/index.html
+++ b/simulador/index.html
@@ -60,7 +60,7 @@
             <a href="../index.html#services">Simulador Placas Solares</a>
           </li>
           <li>
-            <a href="../port.html">Portfólio</a>
+           <!-- <a href="../port.html">Portfólio</a> -->
           </li>
           <li class="menu-has-children">
             <a href="">Nossos Serviços</a>
