--- a/eficiencia/lumino.html
+++ b/eficiencia/lumino.html
@@ -57,7 +57,7 @@
         <ul class="nav-menu">
 
           <li>
-            <a href="#=../index.html">Início</a>
+            <a href="../index.html">Início</a>
           </li>
           <li class="menu-has-children">
             <a href="">Serviços</a>
@@ -118,10 +118,10 @@
               </ul>
             </li>
             <li>
-              <a href="../port.html">Portfólio</a>
+              <!-- <a href="../port.html">Portfólio</a> -->
             </li>
             <li>
-                <a href="../blog">Blog</a>
+              <a href="../blog">Blog</a>
             </li>
             <li>
               <a href="../contact.html">Contato</a>
@@ -138,8 +138,7 @@
     ============================-->
   <section id="hero" style="background: url(../img/lumi2.jpg) top center fixed;">
     <div class="hero-container">
-
-      <img src="../img/logo-header.png">
+      <h1>Luminotécnico</h1>
       <h2>Você está com problemas elétricos na sua casa/ escritório? </h2>
       <p>
         <a href="#about" class="btn-get-started">Saiba como podemos te ajudar</a>
@@ -251,7 +250,8 @@
                 </h4>
                 <p class="description">Otimizamos a energia do local para que ele se torne mais econômico. Anualmente, estima-se que 10% da energia
                   gerada no Brasil seja desperdiçada. Na maior parte dos casos, a culpa não é nossa e sim dos aparelhos que
-                  utilizamos.</p>
+                  utilizamos.
+                </p>
               </div>
             </div>
           </center>
@@ -322,23 +322,23 @@
     </a>
 
     <!-- JavaScript Libraries -->
-    <script src="lib/jquery/jquery.min.js"></script>
-    <script src="lib/jquery/jquery-migrate.min.js"></script>
-    <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
+    <script src="../lib/jquery/jquery.min.js"></script>
+    <script src="../lib/jquery/jquery-migrate.min.js"></script>
+    <script src="../lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../lib/easing/easing.min.js"></script>
+    <script src="../lib/wow/wow.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
 
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/counterup/counterup.min.js"></script>
-    <script src="lib/superfish/hoverIntent.js"></script>
-    <script src="lib/superfish/superfish.min.js"></script>
+    <script src="../lib/waypoints/waypoints.min.js"></script>
+    <script src="../lib/counterup/counterup.min.js"></script>
+    <script src="../lib/superfish/hoverIntent.js"></script>
+    <script src="../lib/superfish/superfish.min.js"></script>
 
     <!-- Contact Form JavaScript File -->
-    <script src="contactform/contactform.js"></script>
+    <script src="../contactform/contactform.js"></script>
 
     <!-- Template Main Javascript File -->
-    <script src="js/main.js"></script>
+    <script src="../js/main.js"></script>
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
       var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
