--- a/index.html
+++ b/index.html
@@ -330,15 +330,17 @@
     <section id="call-to-action">
       <div class="container wow fadeIn">
         <div class="row">
-          <div class="col-lg-9 text-center text-lg-left">
-            <h3 class="cta-title" style="padding-top: 90px;">Quer começar agora? Entre em contato conosco
-              <a href="">aqui</a> ou entre no chat do site e fale agora com um de nossos atendentes.</h3>
+          <h2 style="color:white; position: relative; left:3%; ">Projeto de Energia Solar Off-Grid</h2>
+          <div class="col-lg-7 text-center text-lg-left"><iframe class="videorafael" width="560" height="315" src="https://www.youtube.com/embed/OLLCrS4eE0E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
-          <div class="col-lg-3 cta-btn-container text-center">
-            <p>
-              <a class="cta-btn align-middle" href="port.html">Veja nosso portfólio</a>
-              <a class="cta-btn align-top" href="#">Baixe nosso e-book gratuito</a>
-              <a class="cta-btn align-bottom" href="#">Visite nosso blog</a>
+          <div class="col-lg-4 cta-btn-container text-center">
+            <p style="color:white; text-align: justify;">
+                Há dois anos o nosso cliente Rafael instalou um sistema solar que gera energia a
+                partir do sol e armazena em baterias para ser usada de noite, pois, no local onde mora, a
+                CEB não disponibiliza acesso à energia elétrica. Nos últimos meses, o sistema começou a
+                dar problemas e parou de funcionar, impactando diretamente na sua rotina. A equipe conseguiu ter sucesso no projeto levantando todos os
+                problemas que o sistema tinha, contribuindo para o cliente ter o conforto e a rotina de antes.
+
             </p>
           </div>
         </div>
