--- a/instalacoes/spda.html
+++ b/instalacoes/spda.html
@@ -137,8 +137,7 @@
     ============================-->
   <section id="hero" style="background: url(../img/spda.jpg) top center fixed;">
     <div class="hero-container">
-
-      <img src="../img/logo-header.png">
+<h1>Sistemas de Proteção </h1><h1>a Descargas Atmosféricas</h1>
       <h2>Você está com problemas elétricos na sua casa/ escritório? </h2>
       <p>
         <a href="#about" class="btn-get-started">Saiba como podemos te ajudar</a>
